--- a/aws-eks/overlay/aws-prod/patch-app-config.yml
+++ b/aws-eks/overlay/aws-prod/patch-app-config.yml
@@ -3,4 +3,4 @@ kind: ConfigMap
 metadata:
   name: istory-app-config
 data:
-  spring.datasource.url: '${RDS_ENDPOINT}'
+  spring.datasource.url: 'jdbc:mysql://:3306/${RDS_ENDPOINT}'
